[gd_scene load_steps=36 format=3 uid="uid://ft6q7qiga7ab"]

[ext_resource type="Texture2D" uid="uid://y8os4hhsplns" path="res://assets/texture01.png" id="1_e6og4"]
[ext_resource type="Script" path="res://level.gd" id="1_l2pqv"]
[ext_resource type="Script" path="res://base.gd" id="1_sjd2e"]
[ext_resource type="PackedScene" uid="uid://bs72ogkvdd7d6" path="res://addons/proto_controller/proto_controller.tscn" id="7_3o8jh"]
[ext_resource type="Shader" path="res://level.gdshader" id="7_rn5q4"]
[ext_resource type="PackedScene" uid="uid://bfsmprcgkty17" path="res://spawner.tscn" id="8_eb2gp"]
[ext_resource type="Script" path="res://upgrade.gd" id="11_50oin"]
[ext_resource type="PackedScene" uid="uid://2tbfawuaa0qo" path="res://volt.tscn" id="11_anlq1"]
[ext_resource type="FontFile" uid="uid://c0ovyae7rjh1a" path="res://Lilita_One,Sansation/Sansation/Sansation-Bold.ttf" id="13_hbl1w"]
[ext_resource type="Texture2D" uid="uid://bu3487qorimqs" path="res://assets/star_08.png" id="13_u5qbj"]
[ext_resource type="PackedScene" uid="uid://dpj432gkfo61v" path="res://autokill.tscn" id="14_6tuek"]
[ext_resource type="PackedScene" uid="uid://bitkw328opd3p" path="res://city.tscn" id="16_1wsym"]
[ext_resource type="PackedScene" uid="uid://cgoe0famsltsh" path="res://hub.tscn" id="17_dtr1d"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uc4t1"]
albedo_texture = ExtResource("1_e6og4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iyy1o"]
albedo_color = Color(1, 2, 0.329, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_erxpy"]
shading_mode = 0
albedo_color = Color(0, 2, 0.497, 1)

[sub_resource type="SphereMesh" id="SphereMesh_cilib"]
material = SubResource("StandardMaterial3D_erxpy")
radius = 0.1
height = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fl4ip"]
shader = ExtResource("7_rn5q4")
shader_parameter/vertical_sections = 21
shader_parameter/star_size = 0.01
shader_parameter/star_falloff = 4.0
shader_parameter/margin = 0.05

[sub_resource type="Sky" id="Sky_kgfon"]
sky_material = SubResource("ShaderMaterial_fl4ip")

[sub_resource type="Environment" id="Environment_4p273"]
background_mode = 2
background_color = Color(0.116127, 0.116127, 0.116127, 1)
sky = SubResource("Sky_kgfon")
ambient_light_color = Color(0.802214, 0.289099, 1, 1)
ambient_light_sky_contribution = 0.97
glow_enabled = true
glow_bloom = 0.21
fog_light_color = Color(0.0633089, 0.433868, 0.480295, 1)
fog_light_energy = 0.09
fog_density = 0.009
fog_height = 374.99

[sub_resource type="BoxShape3D" id="BoxShape3D_8ha4x"]
size = Vector3(505.363, 34.2342, 414.379)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_n6gi8"]
height = 7.14363
radius = 2.04707

[sub_resource type="LabelSettings" id="LabelSettings_6pmuj"]
font = ExtResource("13_hbl1w")
font_size = 30

[sub_resource type="SphereShape3D" id="SphereShape3D_qfcog"]
radius = 8.0778

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pqh70"]
resource_name = "lights"
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.469, 0.529, 2, 1)
albedo_texture = ExtResource("13_u5qbj")
billboard_mode = 1
proximity_fade_distance = 5.0

[sub_resource type="QuadMesh" id="QuadMesh_fcuao"]
material = SubResource("StandardMaterial3D_pqh70")
size = Vector2(2, 2)

[sub_resource type="Gradient" id="Gradient_iflx6"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rae5l"]
resource_name = "lights"
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.906, 0.906, 0.906, 0.779)

[sub_resource type="Animation" id="Animation_mgnn3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CSGCylinder3D:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [8.28078]
}

[sub_resource type="Animation" id="Animation_8ihjm"]
resource_name = "spot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CSGCylinder3D:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [8.28078, 92.6332, 8.28078]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nghp5"]
_data = {
"RESET": SubResource("Animation_mgnn3"),
"spot": SubResource("Animation_8ihjm")
}

[sub_resource type="LabelSettings" id="LabelSettings_l8gu4"]
font = ExtResource("13_hbl1w")
font_size = 50
font_color = Color(1, 1, 0, 0.6)
outline_size = 2
shadow_size = 5

[sub_resource type="Animation" id="Animation_ylh8e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_x1sf3"]
resource_name = "blink"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.166667, 0.366667, 0.566667, 0.766667, 0.966667, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k35dq"]
_data = {
"RESET": SubResource("Animation_ylh8e"),
"blink": SubResource("Animation_x1sf3")
}

[node name="level" type="Node3D"]
script = ExtResource("1_l2pqv")

[node name="base" type="Node3D" parent="."]
visible = false
script = ExtResource("1_sjd2e")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="base"]

[node name="CSGBox3D2" type="CSGBox3D" parent="base/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
size = Vector3(1, 4, 1)
material = SubResource("StandardMaterial3D_uc4t1")

[node name="CSGBox3D3" type="CSGBox3D" parent="base/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -3)
size = Vector3(1, 4, 1)
material = SubResource("StandardMaterial3D_uc4t1")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="base/CSGCombiner3D/CSGBox3D3"]
transform = Transform3D(1, 0, 0, 0, -0.707107, -0.707107, 0, 0.707107, -0.707107, 0, 2, 0)
operation = 2

[node name="CSGBox3D4" type="CSGBox3D" parent="base/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1.5, 0)
size = Vector3(1, 4, 1)
material = SubResource("StandardMaterial3D_uc4t1")

[node name="CSGBox3D6" type="CSGBox3D" parent="base/CSGCombiner3D/CSGBox3D4"]
transform = Transform3D(0.224144, -0.12941, 0.965926, 0.699469, 0.711516, -0.0669873, -0.678603, 0.69065, 0.25, -0.0647047, 1.43301, -0.758519)
operation = 2
size = Vector3(1, 3, 1)

[node name="CSGBox3D5" type="CSGBox3D" parent="base/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1.5, -3)
size = Vector3(1, 4, 1)
material = SubResource("StandardMaterial3D_uc4t1")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.49457, -0.521869, -1.32936)
use_collision = true
radius = 1.19511
height = 0.380005

[node name="CSGCylinder3D2" type="CSGCylinder3D" parent="base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.49457, -0.372861, -1.32936)
radius = 0.771245
height = 0.380005
material = SubResource("StandardMaterial3D_iyy1o")

[node name="SpotLight3D" type="SpotLight3D" parent="base/CSGCylinder3D2"]
transform = Transform3D(0.0744392, 0.997226, 0, -0.997226, 0.0744392, 0, 0, 0, 1, 0.00698948, 2.08861, 2.33553)
light_color = Color(1, 1, 0.45098, 1)
light_energy = 3.446
spot_range = 4.27599
spot_angle = 83.7118

[node name="Timer" type="Timer" parent="base/CSGCylinder3D2"]
wait_time = 2.0
one_shot = true

[node name="CPUParticles3D" type="CPUParticles3D" parent="base/CSGCylinder3D2"]
transform = Transform3D(-0.609329, -0.792918, 0, 0.792918, -0.609329, 0, 0, 0, 1, 0.15777, 0.130551, 0.229841)
amount = 22
lifetime = 3.0
mesh = SubResource("SphereMesh_cilib")
gravity = Vector3(0, 9, 0)
initial_velocity_min = 2.0
initial_velocity_max = 2.0
color = Color(0.997334, 0.992304, 0.997862, 1)
hue_variation_min = 0.17
hue_variation_max = 0.17

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
editor_description = "013240

0060ae"
transform = Transform3D(-0.946091, -0.298809, -0.125, -0.184154, 0.178753, 0.966506, -0.266457, 0.937422, -0.224144, 4, 96.5534, 25)
light_color = Color(0, 0.376471, 0.682353, 1)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4p273")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.00406, 38.3958, 0.0779843)

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.4257, 39.29, -11.5389)
omni_range = 3.85334

[node name="player" parent="." instance=ExtResource("7_3o8jh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.5692, 76.3161, 31.3157)

[node name="spawner" parent="." instance=ExtResource("8_eb2gp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -69.8146, 32.47, -2.36795)

[node name="spawner2" parent="." instance=ExtResource("8_eb2gp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5962, 34.3631, 44.3493)

[node name="Area3D" type="Area3D" parent="." groups=["out"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.98264, -26.2785, -8.78265)
shape = SubResource("BoxShape3D_8ha4x")

[node name="volt" parent="." instance=ExtResource("11_anlq1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -26.0188, 58.5663, 0.538143)

[node name="upgrade" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.558, 44.3722, 25.3613)
collision_mask = 5
script = ExtResource("11_50oin")

[node name="CollisionShape3D" type="CollisionShape3D" parent="upgrade"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.485664, 4.77214, 28.3933)
shape = SubResource("CylinderShape3D_n6gi8")

[node name="CanvasLayer" type="CanvasLayer" parent="upgrade"]
process_mode = 2
visible = false

[node name="Label" type="Label" parent="upgrade/CanvasLayer"]
offset_left = 463.0
offset_top = 94.0
offset_right = 746.0
offset_bottom = 129.0
text = "UPGRADE MENU"
label_settings = SubResource("LabelSettings_6pmuj")

[node name="Button" type="Button" parent="upgrade/CanvasLayer"]
offset_left = 504.0
offset_top = 424.0
offset_right = 650.0
offset_bottom = 495.0
text = "BACK"

[node name="HBoxContainer" type="HBoxContainer" parent="upgrade/CanvasLayer"]
offset_left = 310.0
offset_top = 181.0
offset_right = 838.0
offset_bottom = 378.0
alignment = 1

[node name="Camera3D" type="Camera3D" parent="upgrade"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.700653, 3.36007, 31.3818)

[node name="killzone" type="Area3D" parent="upgrade" groups=["puni"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="upgrade/killzone"]
shape = SubResource("SphereShape3D_qfcog")

[node name="Timer" type="Timer" parent="upgrade"]
wait_time = 1.1
one_shot = true

[node name="Node" type="Node3D" parent="upgrade"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.158621, 1.66487, 27.6984)

[node name="CPUParticles3D" type="CPUParticles3D" parent="upgrade/Node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.351845, 0.130551, -1.61205)
emitting = false
amount = 50
mesh = SubResource("QuadMesh_fcuao")
direction = Vector3(0, 1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 10.0
color = Color(0.997334, 0.992304, 0.997862, 1)
color_ramp = SubResource("Gradient_iflx6")
hue_variation_min = 0.17
hue_variation_max = 0.17

[node name="CPUParticles3D2" type="CPUParticles3D" parent="upgrade/Node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.351845, 0.130551, 3.16212)
emitting = false
amount = 50
mesh = SubResource("QuadMesh_fcuao")
direction = Vector3(0, 1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 10.0
color = Color(0.997334, 0.992304, 0.997862, 1)
color_ramp = SubResource("Gradient_iflx6")
hue_variation_min = 0.17
hue_variation_max = 0.17

[node name="CPUParticles3D3" type="CPUParticles3D" parent="upgrade/Node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.34797, 0.130551, 0.701654)
emitting = false
amount = 50
mesh = SubResource("QuadMesh_fcuao")
direction = Vector3(0, 1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 10.0
color = Color(0.997334, 0.992304, 0.997862, 1)
color_ramp = SubResource("Gradient_iflx6")
hue_variation_min = 0.17
hue_variation_max = 0.17

[node name="CPUParticles3D4" type="CPUParticles3D" parent="upgrade/Node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.35648, 0.130551, 2.63439)
emitting = false
amount = 50
mesh = SubResource("QuadMesh_fcuao")
direction = Vector3(0, 1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 10.0
color = Color(0.997334, 0.992304, 0.997862, 1)
color_ramp = SubResource("Gradient_iflx6")
hue_variation_min = 0.17
hue_variation_max = 0.17

[node name="CPUParticles3D5" type="CPUParticles3D" parent="upgrade/Node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.35648, 0.130551, -1.28566)
emitting = false
amount = 50
mesh = SubResource("QuadMesh_fcuao")
direction = Vector3(0, 1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 10.0
color = Color(0.997334, 0.992304, 0.997862, 1)
color_ramp = SubResource("Gradient_iflx6")
hue_variation_min = 0.17
hue_variation_max = 0.17

[node name="SpotLight3D" type="SpotLight3D" parent="upgrade"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.112471)
visible = false

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="upgrade/SpotLight3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.511522, 28.0822, 1.7527)
radius = 2.04038
height = 8.28078
material = SubResource("StandardMaterial3D_rae5l")

[node name="AnimationPlayer" type="AnimationPlayer" parent="upgrade/SpotLight3D"]
libraries = {
"": SubResource("AnimationLibrary_nghp5")
}

[node name="autokill" parent="." instance=ExtResource("14_6tuek")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.71288, -0.217621, -12)

[node name="autokill2" parent="." instance=ExtResource("14_6tuek")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.09757, -0.217621, -12)

[node name="city" parent="." instance=ExtResource("16_1wsym")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 32, -6)

[node name="hub" parent="." instance=ExtResource("17_dtr1d")]
transform = Transform3D(-1, -6.18173e-08, -6.18173e-08, 0, 0.707107, -0.707107, 8.74228e-08, -0.707107, -0.707107, -24.8787, 37.9675, 44.3497)

[node name="bossarea" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -29.8954, 33.8615, -1.36235)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -215.0
offset_top = 113.0
offset_right = 215.0
offset_bottom = 171.0
grow_horizontal = 2
text = "BOSS HAS ARRIVED"
label_settings = SubResource("LabelSettings_l8gu4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_k35dq")
}

[connection signal="timeout" from="base/CSGCylinder3D2/Timer" to="base" method="_on_timer_timeout"]
[connection signal="levelupp" from="player" to="." method="_on_player_levelupp"]
[connection signal="respawnboss" from="player" to="." method="_on_player_respawnboss"]
[connection signal="rewardon" from="player" to="upgrade" method="_on_player_rewardon"]
[connection signal="body_entered" from="upgrade" to="upgrade" method="_on_body_entered"]
[connection signal="pressed" from="upgrade/CanvasLayer/Button" to="upgrade" method="_on_button_pressed"]
[connection signal="timeout" from="upgrade/Timer" to="upgrade" method="_on_timer_timeout"]
[connection signal="animation_finished" from="upgrade/SpotLight3D/AnimationPlayer" to="upgrade" method="_on_animation_player_animation_finished"]

[editable path="player"]
[editable path="player/Char"]
